초품아 데이터 추가

--- a/budget_agent.ipynb
+++ b/budget_agent.ipynb
@@ -239,11 +239,12 @@
         "\n",
         "\n",
         "# DSR = (연간 모든 대출 원리금 상환액) / 연소득\n",
-        "def loan_by_dsr(annual_income, as_of_date=None):\n",
+        "def loan_by_dsr(annual_income, is_first_home=False, as_of_date=None):\n",
         "    \"\"\"\n",
+        "    is_first_home: 생애최초 구매 여부 (True면 DSR 0.7, 아니면 0.4)\n",
         "    as_of_date: 금리 적용 기준일 (date/datetime). None이면 오늘 기준 시중 금리 사용.\n",
         "    \"\"\"\n",
-        "    dsr = 0.4\n",
+        "    dsr = 0.7 if is_first_home else 0.4\n",
         "    max_annual = annual_income * dsr\n",
         "    r = get_mortgage_rate(as_of_date)\n",
         "    n = 30\n",
@@ -295,10 +296,11 @@
         "    annual_income,\n",
         "    ltv,\n",
         "    cash,\n",
+        "    is_first_home=False,\n",
         "    as_of_date=None\n",
         "):\n",
         "    \"\"\"as_of_date: 금리 적용 기준일. None이면 오늘 기준 시중 주택담보대출 평균 금리.\"\"\"\n",
-        "    loan_dsr_limit = loan_by_dsr(annual_income, as_of_date=as_of_date)\n",
+        "    loan_dsr_limit = loan_by_dsr(annual_income, is_first_home=is_first_home, as_of_date=as_of_date)\n",
         "    \n",
         "    price = 100_000_000  # 시작값 1억\n",
         "    step = 10_000_000    # 1천만원 단위 탐색\n",
@@ -351,6 +353,7 @@
         "    annual_income=160_000_000,\n",
         "    ltv=0.7,\n",
         "    cash=320_000_000,\n",
+        "    is_first_home=True,\n",
         "    as_of_date=None  # 예: date(2024, 6, 1) 지정 시 해당 월 금리 적용\n",
         ")\n",
         "print(f\"최대 매수 가능 금액: {result:,} 원\")"
@@ -366,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 18,
       "id": "bd9deeeb",
       "metadata": {},
       "outputs": [
@@ -441,12 +444,14 @@
         "        if cash is not None:\n",
         "            self.loan_info[\"cash\"] = cash\n",
         "        \n",
-        "        # 생애최초구매 여부 추출\n",
-        "        if self.loan_info[\"is_first_home\"] is None:\n",
-        "            if any(k in text_lower for k in [\"생애최초\", \"처음\", \"첫구매\", \"첫 주택\", \"처음 사는\"]):\n",
-        "                self.loan_info[\"is_first_home\"] = True\n",
-        "            elif any(k in text_lower for k in [\"두번째\", \"2주택\", \"재구매\", \"이미\"]):\n",
-        "                self.loan_info[\"is_first_home\"] = False\n",
+        "        # 생애최초구매 여부 추출 (새 표현이 들어오면 기존 값 갱신)\n",
+        "        negated_first_home = re.search(r'(생애최초|첫\\s?구매|첫\\s?주택|처음\\s?사는).{0,8}(아니|아님|아니요|아니오|아니에요)', text_lower)\n",
+        "        if negated_first_home:\n",
+        "            self.loan_info[\"is_first_home\"] = False\n",
+        "        elif any(k in text_lower for k in [\"생애최초\", \"처음\", \"첫구매\", \"첫 주택\", \"처음 사는\"]):\n",
+        "            self.loan_info[\"is_first_home\"] = True\n",
+        "        elif any(k in text_lower for k in [\"두번째\", \"2주택\", \"재구매\", \"이미\", \"생애최초 아님\", \"첫구매 아님\"]):\n",
+        "            self.loan_info[\"is_first_home\"] = False\n",
         "    \n",
         "    async def invoking(self, messages: ChatMessage | MutableSequence[ChatMessage] = None, **kwargs) -> Context | None:\n",
         "        \"\"\"에이전트 호출 전: 저장된 정보를 컨텍스트로 제공\"\"\"\n",
@@ -504,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "id": "cd8f033a",
       "metadata": {},
       "outputs": [
@@ -559,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "id": "mem-connect-code",
       "metadata": {},
       "outputs": [
@@ -587,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 20,
       "id": "4552a656",
       "metadata": {},
       "outputs": [
@@ -596,7 +601,11 @@
           "output_type": "stream",
           "text": [
             "🤖 Agent 응답:\n",
-            "안녕하세요! 아파트 구매를 계획 중이시군요. 대출 가능 금액을 계산하려면 몇 가지 정보를 여쭙고 싶습니다. 먼저 연소득(부부라면 합산 연소득)은 얼마인가요?\n",
+            "안녕하세요! 아파트 구매를 고려 중이시군요. 최대 대출 가능 금액을 계산하는 데 필요한 몇 가지 정보를 여쭤봐도 될까요?\n",
+            "\n",
+            "1. 연소득(부부라면 합산 연소득)은 얼마인가요?  \n",
+            "2. 생애 첫 구매인가요?  \n",
+            "3. 현재 보유하고 계신 현금은 얼마나 되시나요?  \n",
             "\n",
             "📝 메모리에 저장된 정보:\n",
             "   연소득: 아직 입력 안됨\n",
@@ -629,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "id": "c6fba051",
       "metadata": {},
       "outputs": [
@@ -637,25 +646,51 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "🤖 Turn 1: 정보 공유해 주셔서 감사합니다! 정리하면 아래와 같습니다:\n",
-            "\n",
-            "- 연소득: 1억 원  \n",
-            "- 보유 현금: 4억 원  \n",
-            "- 생애첫구매: 예  \n",
-            "\n",
-            "이 데이터를 바탕으로 최대 대출 가능 금액을 계산하고 적합한 구매 금액을 안내드리겠습니다. 추가적으로 궁금한 것이 있거나 우선 구매하고자 하는 금액 감소 확인을 원하시면 말씀해주세요! ...\n",
+            "🤖 Turn 1: 알겠습니다! 생애 첫 구매인지 말씀해주세요. 생애 첫 구매라면 최대 대출 가능 금액이 달라질 수 있습니다. ...\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "r1 = await agent.run(\"연봉은 남편이랑 저 합쳐서 1억 정도고요, 현금은 4억 갖고 있어요. 이번에 생애최초 구매예요\", thread=thread)\n",
+        "r1 = await agent.run(\"연봉은 남편이랑 저 합쳐서 3억 정도고요, 현금은 1억 갖고 있어요. \", thread=thread)\n",
         "print(\"🤖 Turn 1:\", r1, \"...\\n\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
+      "id": "20c0cd3b",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🤖 Turn 1: 감사합니다! 아래 정보를 기반으로 대략적인 대출 가능 금액을 계산해 보겠습니다.\n",
+            "\n",
+            "- 연소득: 3억 원\n",
+            "- 생애최초 구매 아님\n",
+            "- 보유 현금: 1억 원\n",
+            "\n",
+            "보통 연소득의 5~7배까지 대출이 가능하며, 주택담보대출비율(LTV)에 따라 실제 대출 금액이 조정됩니다. 생애 첫 구매가 아니므로 일반적인 경우를 적용하겠습니다.\n",
+            "\n",
+            "대출 금액 추정:\n",
+            "- 연소득 기준: 약 15억~21억 원\n",
+            "- LTV 기준 (약 60~70%): 구매하려는 아파트 가격에 따라 달라짐\n",
+            "\n",
+            "따라서 구매하려는 아파트 가격을 말씀해 주시면 더 정확한 계산을 도와드릴 수 있습니다! 😊 ...\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "r1 = await agent.run(\"우리 둘 다 생애최초가 아니예요\", thread=thread)\n",
+        "print(\"🤖 Turn 1:\", r1, \"...\\n\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "id": "edef939c",
       "metadata": {},
       "outputs": [
@@ -665,8 +700,8 @@
           "text": [
             "\n",
             "📝 메모리에 저장된 정보:\n",
-            "   연소득: 100000000\n",
-            "   보유현금: 400000000\n",
+            "   연소득: 300000000\n",
+            "   보유현금: 100000000\n",
             "   생애최초구매: True\n"
           ]
         }
