취득세 세법 수정

--- a/budget_agent.ipynb
+++ b/budget_agent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "83ebdfc1",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "35d74807",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "3a34d22d",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "9cdd60f0",
    "metadata": {},
    "outputs": [],
@@ -332,19 +332,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "b55cce9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculated_acquisition_tax(price: int | float) -> float:\n",
-    "    \"\"\"취득세 계산 함수 (원 단위)\"\"\"\n",
+    "    \"\"\"1주택 기준 취득세+지방교육세 계산 (원 단위)\n",
+    "\n",
+    "    - 6억 이하: 취득세 1.0% + 지방교육세 0.1%\n",
+    "    - 6억 초과 ~ 9억 이하: 취득세율 1.0%~3.0% 선형 증가, 지방교육세는 취득세의 10%\n",
+    "    - 9억 초과: 취득세 3.0% + 지방교육세 0.3%\n",
+    "    \"\"\"\n",
+    "    if price <= 0:\n",
+    "        return 0.0\n",
+    "\n",
     "    if price <= 600_000_000:\n",
-    "        return price * 0.011   # 1.1%\n",
+    "        acquisition_rate = 0.01\n",
     "    elif price <= 900_000_000:\n",
-    "        return price * 0.022   # 2.2%\n",
+    "        # 6~9억 구간 누진(유효 취득세율 선형 증가)\n",
+    "        acquisition_rate = 0.01 + ((price - 600_000_000) / 300_000_000) * 0.02\n",
+    "        # 사용자 기대값(예: 8.8억 -> 2.87%)과 일치하도록 소수 둘째자리(%) 기준 반올림\n",
+    "        acquisition_rate = round(acquisition_rate, 4)\n",
     "    else:\n",
-    "        return price * 0.033   # 3.3%\n"
+    "        acquisition_rate = 0.03\n",
+    "\n",
+    "    local_education_rate = acquisition_rate * 0.1\n",
+    "    total_rate = acquisition_rate + local_education_rate\n",
+    "    return float(round(price * total_rate))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -357,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "c668e3e4",
    "metadata": {},
    "outputs": [],
@@ -427,6 +444,107 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77011537",
+   "metadata": {},
+   "source": [
+    "## max_purchase_price 테스트 코드 셀\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0f84bc9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[입력값]\n",
+      "- annual_income: 170,000,000원\n",
+      "- cash: 300,000,000원\n",
+      "- is_first_home: True\n",
+      "- annual_interest_payment: 0원\n",
+      "- annual_principal_payment: 0원\n",
+      "- loan_type: mortgage\n",
+      "- region: capital\n",
+      "- is_capital_or_regulated: True\n",
+      "- term_years: 30\n",
+      "\n",
+      "[결과]\n",
+      "- max_price: 870,000,000원\n",
+      "- max_tax: 26,796,000원\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'max_price': 870000000, 'max_tax': 26796000}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# max_purchase_price 테스트 코드 셀\n",
+    "# 필요 시 아래 입력값만 바꿔서 반복 테스트하세요.\n",
+    "def run_max_purchase_price_test(\n",
+    "    annual_income=170_000_000,\n",
+    "    cash=300_000_000,\n",
+    "    is_first_home=True,\n",
+    "    annual_interest_payment=0,\n",
+    "    annual_principal_payment=0,\n",
+    "    loan_type=\"mortgage\",\n",
+    "    region=\"capital\",\n",
+    "    is_capital_or_regulated=True,\n",
+    "    term_years=30,\n",
+    "):\n",
+    "    max_price, max_tax = max_purchase_price(\n",
+    "        annual_income=annual_income,\n",
+    "        cash=cash,\n",
+    "        is_first_home=is_first_home,\n",
+    "        annual_interest_payment=annual_interest_payment,\n",
+    "        annual_principal_payment=annual_principal_payment,\n",
+    "        loan_type=loan_type,\n",
+    "        region=region,\n",
+    "        is_capital_or_regulated=is_capital_or_regulated,\n",
+    "        term_years=term_years,\n",
+    "    )\n",
+    "\n",
+    "    print(\"[입력값]\")\n",
+    "    print(f\"- annual_income: {annual_income:,}원\")\n",
+    "    print(f\"- cash: {cash:,}원\")\n",
+    "    print(f\"- is_first_home: {is_first_home}\")\n",
+    "    print(f\"- annual_interest_payment: {annual_interest_payment:,}원\")\n",
+    "    print(f\"- annual_principal_payment: {annual_principal_payment:,}원\")\n",
+    "    print(f\"- loan_type: {loan_type}\")\n",
+    "    print(f\"- region: {region}\")\n",
+    "    print(f\"- is_capital_or_regulated: {is_capital_or_regulated}\")\n",
+    "    print(f\"- term_years: {term_years}\")\n",
+    "\n",
+    "    print(\"\\n[결과]\")\n",
+    "    print(f\"- max_price: {max_price:,}원\")\n",
+    "    print(f\"- max_tax: {max_tax:,}원\")\n",
+    "\n",
+    "    return {\"max_price\": max_price, \"max_tax\": max_tax}\n",
+    "\n",
+    "\n",
+    "# 기본 테스트 케이스\n",
+    "result = run_max_purchase_price_test(\n",
+    "    annual_income=170_000_000,\n",
+    "    cash=300_000_000,\n",
+    "    is_first_home=True,\n",
+    "    annual_interest_payment=0,\n",
+    "    annual_principal_payment=0,\n",
+    ")\n",
+    "result\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57ed9e65",
    "metadata": {},
    "source": [
@@ -435,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "bd9deeeb",
    "metadata": {},
    "outputs": [
@@ -858,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "cd8f033a",
    "metadata": {},
    "outputs": [
@@ -1028,6 +1146,54 @@
     "thread = agent.get_new_thread()\n",
     "print(\"✅ Budget Agent 생성 완료! (output guard 적용)\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "de2a42bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 Turn 1: 감사합니다. 이미 입력된 정보와 동일하므로 추가로 질문을 드리겠습니다.\n",
+      "\n",
+      "현재 미입력된 정보는 다음 세 가지입니다:\n",
+      "1. **생애최초구매여부**: 아파트를 생애 처음으로 구매하시는 건가요? (네/아니요로 답변 부탁드립니다.)\n",
+      "2. **보유대출 연이자 상환액**: 매년 갚으시는 기존 대출의 이자액은 얼마인가요? 만약 보유 대출이 없으시면 '없음'이라 답변 부탁드립니다.\n",
+      "3. **보유대출 연원금 상환액**: 매년 갚으시는 기존 대출의 원금 액수는 얼마인가요? 위와 마찬가지로 보유 대출이 없으시면 '없음'으로 답변 부탁드립니다.\n",
+      "\n",
+      "해당 질문들에 답변해 주시면 계산을 진행하겠습니다. ...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "r1 = await agent.run(\"연봉은 남편이랑 저 합쳐서 1억 3천만원 정도고요, 현금은 3억 갖고 있어요. \", thread=thread)\n",
+    "print(\"🤖 Turn 1:\", r1, \"...\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "efcdedfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 Turn 1: 최대 매수 가능 아파트 가격: 870,000,000원\n",
+      "취득세: 26,796,000원 ...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2 = await agent.run(\"생애 첫 구매이고, 대출은 없어요. \", thread=thread)\n",
+    "print(\"🤖 Turn 1:\", r2, \"...\\n\")"
    ]
   }
  ],
