--- a/budget_agent.ipynb
+++ b/budget_agent.ipynb
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "de2a42bd",
    "metadata": {},
    "outputs": [
@@ -1171,13 +1171,13 @@
     }
    ],
    "source": [
-    "r1 = await agent.run(\"연봉은 남편이랑 저 합쳐서 1억 3천만원 정도고요, 현금은 3억 갖고 있어요. \", thread=thread)\n",
-    "print(\"🤖 Turn 1:\", r1, \"...\\n\")"
+    "### r1 = await agent.run(\"연봉은 남편이랑 저 합쳐서 1억 3천만원 정도고요, 현금은 3억 갖고 있어요. \", thread=thread)\n",
+    "### print(\"🤖 Turn 1:\", r1, \"...\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "efcdedfb",
    "metadata": {},
    "outputs": [
@@ -1192,8 +1192,8 @@
     }
    ],
    "source": [
-    "r2 = await agent.run(\"생애 첫 구매이고, 대출은 없어요. \", thread=thread)\n",
-    "print(\"🤖 Turn 1:\", r2, \"...\\n\")"
+    "### r2 = await agent.run(\"생애 첫 구매이고, 대출은 없어요. \", thread=thread)\n",
+    "### print(\"🤖 Turn 1:\", r2, \"...\\n\")"
    ]
   }
  ],
